# NN_Enumeration

./: .gitignore  12d_converted.pt  CHANGELOG.md  Comapre_Cells.py  MIGRATION.md  Model_Complex_boundary_cells.h5  README.md  boundary_list.npy  boundary_list_new.npy  cdd_vertex_validation.py  diagnose_missed_cell.py  environment.yml  experiment_dynamics_complexity.py  experiment_dynamics_complexity_output.txt  experiment_dynamics_complexity_results.npz  experiment_dynamics_complexity_run2.txt  experiment_dynamics_complexity_summary.txt  facet_enumeration_result.npy  inspect_not_bd.py  lp_ground_truth_deep.py  model_8d_deep_cell_id.pkl  model_8d_deep_polytope.pkl  pyproject.toml  refinement_depth_data.csv  refinement_results.csv  requirement.txt  requirements-dev.txt  requirements.txt  run.py  script.py  test_boundary.py  test_membership.py  test_nlp_vs_refinement.py  test_refinement_vs_dreal.py  test_unsafe.py  test_verify_new.py  verification_patterns.npy  verify_quadrotor_barrier.py
.claude/: settings.local.json
Enumeration_module/: Enumeration_module.py  __init__.py  utils_Enumeration.py
NN_files/: 12D_new.pt  Arch3_2_96.pt  BC_12D_2.pt  Decay_6d_12_12.pt  complex_1_32.pt  complex_3d_2x64.pt  high_o_2x16_ren.pt  high_o_4x16_ren.pt  high_o_commit_2fd0d11_layers_2_size_16_seed_111_certify_True.pt  high_o_commit_2fd0d11_layers_4_size_16_seed_222_certify_True.pt  hioord12.pt  model_6d_20_20_deep.pt  model_arch_2_64_ren.pt  model_complex_2_96_ren.pt  model_complex_32.pt  model_complex_32_ren.pt  model_complex_3d_64_64.pt  model_decay_2_10_ren.pt  model_decay_2_12_n.pt  (+10 more)
(+45 files in other folders)
