[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "relu-region-enumerator"
version = "0.1.0"
description = "Exact and complete enumeration of polytopic linear regions of ReLU neural networks via bitwise vertex-adjacency testing."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8,<3.12"
keywords = ["neural networks", "ReLU", "polytope", "enumeration", "verification", "control"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numpy>=1.24",
    "numba>=0.57",
    "scipy>=1.10",
    "torch>=2.0",
    "h5py>=3.8",
    "matplotlib>=3.7",
]

[project.urls]
Homepage = "https://github.com/PouyaSamanipour/NN_Enumeration"
Repository = "https://github.com/PouyaSamanipour/NN_Enumeration"
"Bug Tracker" = "https://github.com/PouyaSamanipour/NN_Enumeration/issues"

[project.optional-dependencies]
dev = ["snakeviz", "memory_profiler", "pytest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["relu_region_enumerator*"]